--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 django = "^4.1.5"
 djangorestframework = "^3.14.0"
 django-debug-toolbar = "^3.8.1"
+asyncio = "^3.4.3"
 
 
 [build-system]
