--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django = "^4.1.5"
 djangorestframework = "^3.14.0"
 django-debug-toolbar = "^3.8.1"
 asyncio = "^3.4.3"
+django-async-orm = "^0.1.11"
 
 
 [build-system]
